--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node": "12.x"
   },
   "dependencies": {
+    "@ignatiusmb/aqua": "^20.0.0",
     "compression": "^1.7.4",
     "markdown-it": "^11.0.0",
     "polka": "^1.0.0-next.11",
