--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "compression": "^1.7.4",
     "markdown-it": "^11.0.0",
     "polka": "^1.0.0-next.11",
-    "sirv": "^0.4.6"
+    "sirv": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
@@ -31,22 +31,23 @@
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-typescript": "^7.10.1",
     "@babel/runtime": "^7.10.2",
-    "@rollup/plugin-babel": "^5.0.2",
-    "@rollup/plugin-commonjs": "^12.0.0",
-    "@rollup/plugin-json": "^4.0.3",
-    "@rollup/plugin-node-resolve": "^8.0.0",
-    "@rollup/plugin-replace": "^2.3.2",
+    "@rollup/plugin-babel": "^5.0.3",
+    "@rollup/plugin-commonjs": "^13.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^8.0.1",
+    "@rollup/plugin-replace": "^2.3.3",
     "@rollup/plugin-typescript": "^4.1.2",
-    "@testing-library/jest-dom": "^5.9.0",
+    "@testing-library/jest-dom": "^5.10.1",
     "@testing-library/svelte": "^3.0.0",
-    "@types/node": "^14.0.9",
+    "@types/node": "^14.0.13",
     "babel-jest": "^26.0.1",
     "jest": "^26.0.1",
-    "rollup": "^2.16.0",
+    "rollup": "^2.16.1",
     "rollup-plugin-svelte": "^5.2.2",
     "rollup-plugin-terser": "^6.1.0",
     "sapper": "^0.27.15",
     "svelte": "^3.23.2",
+    "svelte-preprocess": "^3.9.7",
     "svelte-test": "^0.4.0",
     "tslib": "^2.0.0",
     "typescript": "^3.9.5"
