--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@rollup/plugin-typescript": "^5.0.2",
     "@testing-library/jest-dom": "^5.11.1",
     "@testing-library/svelte": "^3.0.0",
+    "@types/express": "^4.17.7",
     "@types/node": "^14.0.26",
     "autoprefixer": "^9.8.5",
     "babel-jest": "^26.1.0",
