--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "sirv": "^1.0.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.0",
+    "@babel/core": "^7.11.1",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
@@ -28,9 +28,9 @@
     "@babel/plugin-transform-runtime": "^7.11.0",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-typescript": "^7.10.4",
-    "@babel/runtime": "^7.11.0",
+    "@babel/runtime": "^7.11.2",
     "@ignatiusmb/aqua": "^20.3.1",
-    "@ignatiusmb/elements": "0.2.1",
+    "@ignatiusmb/elements": "0.2.2",
     "@rollup/plugin-babel": "^5.1.0",
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-json": "^4.1.0",
@@ -46,15 +46,16 @@
     "eslint": "^7.6.0",
     "eslint-plugin-svelte3": "^2.7.3",
     "jest": "^26.2.2",
+    "mdsvex": "^0.8.3",
     "postcss": "^7.0.32",
-    "rollup": "^2.23.0",
+    "rollup": "^2.23.1",
     "rollup-plugin-svelte": "^5.2.3",
     "rollup-plugin-terser": "^6.1.0",
-    "sapper": "^0.27.16",
-    "svelte": "^3.24.0",
-    "svelte-preprocess": "^4.0.9",
+    "sapper": "^0.28.0",
+    "svelte": "^3.24.1",
+    "svelte-preprocess": "^4.0.10",
     "svelte-test": "^0.4.0",
-    "tslib": "^2.0.0",
+    "tslib": "^2.0.1",
     "typescript": "^3.9.7"
   }
 }
