--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "lint": "eslint src --ext svelte,js",
     "dev": "sapper dev",
     "build": "sapper build --legacy",
-    "export": "sapper export --legacy",
+    "export": "run-s sapper:export static:404",
+    "sapper:export": "sapper export --legacy",
+    "static:404": "run-s static:404:mv static:404:rm",
+    "static:404:mv": "mv __sapper__/export/404/index.html __sapper__/export/404.html",
+    "static:404:rm": "rmdir \"__sapper__/export/404\"",
     "test": "jest --coverage"
   },
   "engines": {
@@ -46,6 +50,7 @@
     "eslint": "^7.6.0",
     "eslint-plugin-svelte3": "^2.7.3",
     "jest": "^26.2.2",
+    "npm-run-all": "^4.1.5",
     "postcss": "^7.0.32",
     "rollup": "^2.23.1",
     "rollup-plugin-svelte": "^5.2.3",
