--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   },
   "dependencies": {
     "compression": "^1.7.4",
-    "markdown-it": "^11.0.0",
     "polka": "^1.0.0-next.11",
     "sirv": "^1.0.5"
   },
@@ -51,6 +50,9 @@
     "eslint": "^7.6.0",
     "eslint-plugin-svelte3": "^2.7.3",
     "jest": "^26.2.2",
+    "markdown-it": "^11.0.0",
+    "markdown-it-container": "^3.0.0",
+    "markdown-it-mark": "^3.0.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^7.0.32",
     "rollup": "^2.23.1",
