--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "version": "2.0.0",
   "private": true,
   "scripts": {
-    "lint": "eslint src --ext svelte,js",
     "dev": "sapper dev",
     "build": "sapper build --legacy",
     "export": "run-s sapper:export static:404",
@@ -12,7 +11,10 @@
     "static:404": "run-s static:404:mv static:404:rm",
     "static:404:mv": "mv __sapper__/export/404/index.html __sapper__/export/404.html",
     "static:404:rm": "rmdir \"__sapper__/export/404\"",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "lint": "eslint src --ext svelte,js",
+    "check": "prettier -c src",
+    "format": "prettier -w src"
   },
   "engines": {
     "node": "12.x"
@@ -49,12 +51,15 @@
     "babel-jest": "^26.2.2",
     "eslint": "^7.6.0",
     "eslint-plugin-svelte3": "^2.7.3",
+    "husky": "^4.2.5",
     "jest": "^26.2.2",
     "markdown-it": "^11.0.0",
     "markdown-it-container": "^3.0.0",
     "markdown-it-mark": "^3.0.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^7.0.32",
+    "prettier": "^2.1.1",
+    "prettier-plugin-svelte": "^1.1.1",
     "rollup": "^2.23.1",
     "rollup-plugin-svelte": "^5.2.3",
     "rollup-plugin-terser": "^6.1.0",
