--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@babel/preset-typescript": "^7.10.4",
     "@babel/runtime": "^7.11.2",
     "@ignatiusmb/aqua": "^20.3.1",
-    "@ignatiusmb/elements": "0.4.1",
+    "@ignatiusmb/elements": "0.4.2",
     "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-babel": "^5.1.0",
     "@rollup/plugin-commonjs": "^14.0.0",
@@ -63,7 +63,7 @@
     "rollup": "^2.23.1",
     "rollup-plugin-svelte": "^5.2.3",
     "rollup-plugin-terser": "^6.1.0",
-    "sapper": "^0.28.2",
+    "sapper": "0.28.0",
     "svelte": "^3.24.1",
     "svelte-preprocess": "^4.0.10",
     "svelte-test": "^0.4.0",
