--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "dependencies": {
     "compression": "^1.7.4",
+    "dotenv": "^8.2.0",
+    "faunadb": "^3.0.1",
     "polka": "^1.0.0-next.11",
     "sirv": "^1.0.5"
   },
