--- a/package.json
+++ b/package.json
@@ -48,14 +48,13 @@
     "autoprefixer": "^10.0.0",
     "eslint": "^7.6.0",
     "eslint-plugin-svelte3": "^2.7.3",
-    "husky": "^4.2.5",
     "markdown-it": "^11.0.0",
     "markdown-it-container": "^3.0.0",
     "markdown-it-mark": "^3.0.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.0.5",
     "prettier": "^2.1.1",
-    "prettier-plugin-svelte": "1.1.1",
+    "prettier-plugin-svelte": "^1.1.1",
     "rollup": "^2.26.11",
     "rollup-plugin-svelte": "^6.0.1",
     "rollup-plugin-terser": "^7.0.2",
