--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@babel/preset-typescript": "^7.10.4",
     "@babel/runtime": "^7.11.2",
     "@ignatiusmb/aqua": "^20.3.1",
+    "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-commonjs": "^15.0.0",
     "@rollup/plugin-json": "^4.1.0",
@@ -44,6 +45,8 @@
     "@rollup/plugin-typescript": "^6.0.0",
     "@types/express": "^4.17.7",
     "@types/node": "^14.0.27",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
     "autoprefixer": "^10.0.0",
     "eslint": "^7.6.0",
     "eslint-plugin-svelte3": "^2.7.3",
@@ -58,7 +61,7 @@
     "rollup-plugin-svelte": "^6.0.1",
     "rollup-plugin-terser": "^7.0.2",
     "sapper": "0.28.10",
-    "svelement": "0.0.3",
+    "svelement": "0.0.5",
     "svelte": "^3.29.0",
     "svelte-preprocess": "^4.3.2",
     "tslib": "^2.0.1",
