--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "markdown-it": "^11.0.0",
     "markdown-it-container": "^3.0.0",
     "markdown-it-mark": "^3.0.0",
+    "mauss": "0.0.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.0.5",
     "prettier": "^2.1.1",
