--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -16,9 +16,7 @@ jobs:
         with:
           node-version: "12.x"
       - name: Lint Check
-        run: |
-          npm install
-          npm run lint
+        run: npm install && npm run lint
 
   check-style:
     runs-on: ubuntu-latest
@@ -29,6 +27,4 @@ jobs:
         with:
           node-version: "12.x"
       - name: Style Check
-        run: |
-          npm install
-          npm run check
+        run: npm install && npm run check
