chore: minor code order rearrangement

--- a/.eslintrc
+++ b/.eslintrc
@@ -19,11 +19,11 @@
 		{
 			"files": ["**/*.ts"],
 			"parser": "@typescript-eslint/parser",
+			"plugins": ["@typescript-eslint"],
 			"extends": [
 				"plugin:@typescript-eslint/eslint-recommended",
 				"plugin:@typescript-eslint/recommended"
-			],
-			"plugins": ["@typescript-eslint"]
+			]
 		}
 	]
 }
