--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@rollup/plugin-replace": "^2.3.3",
     "@rollup/plugin-typescript": "^6.0.0",
     "@types/express": "^4.17.7",
+    "@types/markdown-it": "^12.0.1",
     "@types/node": "^14.0.27",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
