--- a/.prettierrc
+++ b/.prettierrc
@@ -4,7 +4,11 @@
 	"singleQuote": true,
 	"tabWidth": 2,
 	"useTabs": true,
-	"svelteSortOrder": "scripts-markup-styles",
+	"svelteSortOrder": "options-scripts-markup-styles",
+	"svelteStrictMode": false,
+	"svelteBracketNewLine": false,
+	"svelteAllowShorthand": true,
+	"svelteIndentScriptAndStyle": true,
 	"overrides": [
 		{
 			"files": ["README.md", "package.json"],
