chore: add svelte check to lint TS scripts

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "static:404": "run-s static:404:mv static:404:rm",
     "static:404:mv": "mv __sapper__/export/404/index.html __sapper__/export/404.html",
     "static:404:rm": "rmdir \"__sapper__/export/404\"",
-    "lint": "eslint src --ext svelte,js,ts",
+    "lint": "run-p lint:**",
+    "lint:svelte": "svelte-check",
+    "lint:script": "eslint src --ext js,ts",
     "check": "prettier -c src",
     "format": "prettier -w src"
   },
@@ -65,6 +67,7 @@
     "sapper": "0.28.10",
     "svelement": "0.0.7",
     "svelte": "^3.31.2",
+    "svelte-check": "^1.1.27",
     "svelte-preprocess": "^4.6.1",
     "tslib": "^2.1.0",
     "typescript": "^4.1.3"
