chore: specify folder to check

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "static:404:mv": "mv __sapper__/export/404/index.html __sapper__/export/404.html",
     "static:404:rm": "rmdir \"__sapper__/export/404\"",
     "lint": "run-p lint:**",
-    "lint:svelte": "svelte-check",
+    "lint:svelte": "svelte-check src",
     "lint:script": "eslint src --ext js,ts",
     "check": "prettier -c src",
     "format": "prettier -w src"
