--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "static:404:mv": "mv __sapper__/export/404/index.html __sapper__/export/404.html",
     "static:404:rm": "rmdir \"__sapper__/export/404\"",
     "lint": "run-p lint:**",
-    "lint:script": "eslint src --ext js,ts",
+    "lint:eslint": "eslint src --ext js,ts",
     "lint:svelte": "svelte-check src --output human --ignore src/node_modules",
+    "lint:typescript": "tsc --strict --noEmit --skipLibCheck",
     "lint:markdown": "markdownlint content/**/*.md",
     "check": "prettier -c src",
     "format": "prettier -w src"
@@ -46,6 +47,7 @@
     "@rollup/plugin-node-resolve": "^11.1.0",
     "@rollup/plugin-replace": "^2.3.4",
     "@rollup/plugin-typescript": "^8.1.0",
+    "@tsconfig/svelte": "^1.0.10",
     "@types/express": "^4.17.11",
     "@types/markdown-it": "^12.0.1",
     "@types/node": "^14.14.22",
