--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "markdown-it-container": "^3.0.0",
     "markdown-it-mark": "^3.0.1",
     "markdownlint-cli": "^0.26.0",
-    "mauss": "0.0.3",
+    "mauss": "0.0.4",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.2.4",
     "prettier": "^2.2.1",
@@ -67,7 +67,7 @@
     "rollup": "^2.38.2",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
-    "sapper": "0.29.0",
+    "sapper": "^0.29.0",
     "svelement": "0.0.10",
     "svelte": "^3.32.1",
     "svelte-check": "^1.1.31",
