--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "markdown-it-container": "^3.0.0",
     "markdown-it-mark": "^3.0.1",
     "markdownlint-cli": "^0.26.0",
-    "mauss": "0.0.4",
+    "mauss": "^0.0.7",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.2.4",
     "prettier": "^2.2.1",
