--- a/package.json
+++ b/package.json
@@ -54,9 +54,11 @@
     "autoprefixer": "^10.2.4",
     "eslint": "^7.19.0",
     "eslint-plugin-svelte3": "^3.0.0",
+    "katex": "^0.12.0",
     "markdown-it": "^12.0.4",
     "markdown-it-container": "^3.0.0",
     "markdown-it-mark": "^3.0.1",
+    "markdown-it-texmath": "^0.8.0",
     "markdownlint-cli": "^0.26.0",
     "mauss": "^0.0.7",
     "npm-run-all": "^4.1.5",
