--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@rollup/plugin-node-resolve": "^11.1.1",
     "@rollup/plugin-replace": "^2.3.4",
     "@rollup/plugin-typescript": "^8.1.1",
+    "@rollup/plugin-url": "^6.0.0",
     "@types/express": "^4.17.11",
     "@types/markdown-it": "^12.0.1",
     "@types/node": "^14.14.22",
