--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "markdown-it-mark": "^3.0.1",
     "markdown-it-texmath": "^0.8.0",
     "markdownlint-cli": "^0.27.1",
+    "marqua": "^0.0.3",
     "mauss": "^0.0.7",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.2.4",
