packages: add vite + kit + adapter-static

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ yarn-error.log
 *secret.*
 
 /node_modules/
+/.svelte
+/build
+/functions
+
 /src/node_modules/@sapper/
 /coverage/
 /cypress/screenshots/
