--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "mauss.dev",
   "version": "2.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "sapper dev",
-    "build": "sapper build --legacy",
+    "dev": "svelte-kit dev",
+    "build": "svelte-kit build",
     "export": "run-s sapper:export static:404",
     "sapper:export": "sapper export --legacy --entry \"/ 404\"",
     "static:404": "run-s static:404:mv static:404:rm",
@@ -47,6 +48,8 @@
     "@rollup/plugin-replace": "^2.3.4",
     "@rollup/plugin-typescript": "^8.1.1",
     "@rollup/plugin-url": "^6.0.0",
+    "@sveltejs/adapter-static": "^1.0.0-next.3",
+    "@sveltejs/kit": "^1.0.0-next.51",
     "@types/express": "^4.17.11",
     "@types/markdown-it": "^12.0.1",
     "@types/node": "^14.14.22",
@@ -75,6 +78,7 @@
     "svelte-check": "^1.1.31",
     "svelte-preprocess": "^4.6.5",
     "tslib": "^2.1.0",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "vite": "^2.1.2"
   }
 }
