--- a/package.json
+++ b/package.json
@@ -23,34 +23,12 @@
     "node": ">=12.x"
   },
   "dependencies": {
-    "compression": "^1.7.4",
-    "dotenv": "^8.2.0",
-    "faunadb": "^4.0.2",
-    "polka": "^1.0.0-next.11",
-    "sirv": "^1.0.11"
+    "faunadb": "^4.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-object-assign": "^7.12.1",
-    "@babel/plugin-transform-runtime": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-typescript": "^7.12.7",
-    "@babel/runtime": "^7.12.5",
     "@ignatiusmb/aqua": "^20.3.2",
-    "@rollup/plugin-alias": "^3.1.2",
-    "@rollup/plugin-babel": "^5.2.3",
-    "@rollup/plugin-commonjs": "^17.1.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^11.1.1",
-    "@rollup/plugin-replace": "^2.3.4",
-    "@rollup/plugin-typescript": "^8.1.1",
-    "@rollup/plugin-url": "^6.0.0",
     "@sveltejs/adapter-static": "^1.0.0-next.3",
     "@sveltejs/kit": "^1.0.0-next.51",
-    "@types/express": "^4.17.11",
     "@types/markdown-it": "^12.0.1",
     "@types/node": "^14.14.22",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
@@ -69,10 +47,6 @@
     "postcss": "^8.2.4",
     "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^2.1.1",
-    "rollup": "^2.38.2",
-    "rollup-plugin-svelte": "^7.1.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "sapper": "^0.29.0",
     "svelement": "0.0.10",
     "svelte": "^3.32.1",
     "svelte-check": "^1.1.31",
