--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "node": ">=12.x"
   },
   "dependencies": {
-    "faunadb": "^4.0.2"
+    "faunadb": "^4.0.2",
+    "mauss": "^0.0.7"
   },
   "devDependencies": {
     "@ignatiusmb/aqua": "^20.3.2",
@@ -42,12 +43,11 @@
     "markdown-it-mark": "^3.0.1",
     "markdown-it-texmath": "^0.8.0",
     "markdownlint-cli": "^0.27.1",
-    "mauss": "^0.0.7",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.2.4",
     "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^2.1.1",
-    "svelement": "0.0.10",
+    "svelement": "^0.0.10",
     "svelte": "^3.32.1",
     "svelte-check": "^1.1.31",
     "svelte-preprocess": "^4.6.5",
