--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "svelte-kit build",
     "lint": "run-p lint:**",
     "lint:eslint": "eslint src --ext js,ts",
-    "lint:svelte": "svelte-check src --output human --ignore src/node_modules",
+    "lint:svelte": "svelte-check src --output human",
     "lint:typescript": "tsc --strict --noEmit --skipLibCheck",
     "lint:markdown": "markdownlint content/**/*.md",
     "check": "prettier -c src",
@@ -23,7 +23,7 @@
     "@sveltejs/adapter-static": "^1.0.0-next.3",
     "@sveltejs/kit": "^1.0.0-next.51",
     "@types/markdown-it": "^12.0.1",
-    "@types/node": "^14.14.22",
+    "@types/node": "^14.14.36",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "autoprefixer": "^10.2.4",
