--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "svelte-check": "^1.1.31",
     "svelte-preprocess": "^4.6.5",
     "tslib": "^2.1.0",
-    "typescript": "^4.1.3",
-    "vite": "^2.1.2"
+    "typescript": "^4.1.3"
   }
 }
