--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@sveltejs/kit": "^1.0.0-next.111",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
+    "@vercel/node": "^1.12.1",
     "autoprefixer": "^10.2.4",
     "eslint": "^7.19.0",
     "eslint-plugin-svelte3": "^3.0.0",
