--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "faunadb": "^4.0.2"
   },
   "devDependencies": {
-    "@sveltejs/adapter-static": "^1.0.0-next.3",
-    "@sveltejs/kit": "^1.0.0-next.111",
+    "@sveltejs/adapter-static": "next",
+    "@sveltejs/kit": "next",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "autoprefixer": "^10.2.4",
