--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
     "lint": "npm run lint:es && npm run lint:sv && npm run lint:ts && npm run lint:md",
-    "lint:es": "eslint src --ext js,ts",
+    "lint:es": "eslint src --ext js,ts,svelte",
     "lint:sv": "svelte-check src --output human",
     "lint:ts": "tsc --strict --noEmit --skipLibCheck",
     "lint:md": "markdownlint content/**/*.md",
@@ -22,6 +22,7 @@
     "@typescript-eslint/parser": "^5.12.0",
     "autoprefixer": "^10.2.4",
     "eslint": "^8.9.0",
+    "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-svelte3": "^3.0.0",
     "katex": "^0.15.2",
     "markdown-it-texmath": "^0.9.0",
