cleanup and fix more lint

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "svelte-kit build",
     "lint": "npm run lint:es && npm run lint:sv && npm run lint:ts && npm run lint:md",
     "lint:es": "eslint src --ext js,ts,svelte",
-    "lint:sv": "svelte-check src --tsconfig tsconfig.json --output human",
+    "lint:sv": "svelte-check src --tsconfig tsconfig.json",
     "lint:ts": "tsc --strict --noEmit --skipLibCheck",
     "lint:md": "markdownlint content/**/*.md",
     "check": "prettier -c src",
