extends generated tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,3 @@
 {
-	"extends": "mauss/tsconfig.json",
-	"compilerOptions": {
-		"target": "ES2020",
-		"sourceMap": true,
-		"baseUrl": ".",
-		"paths": {
-			"$lib/*": ["src/lib/*"]
-		}
-	},
-	"include": ["src/**/*"]
+	"extends": "./.svelte-kit/tsconfig.json"
 }
