--- a/.github/workflows/quality.yaml
+++ b/.github/workflows/quality.yaml
@@ -14,9 +14,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
-          node-version: "12.x"
+          node-version: 14
       - name: Lint Check
         run: npm install && npm run lint
 
@@ -25,8 +25,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
-          node-version: "12.x"
+          node-version: 14
       - name: Style Check
         run: npm install && npm run check
