--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "prettier": "mauss/prettier.json",
   "devDependencies": {
-    "@sveltejs/adapter-static": "next",
+    "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
