--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "svelte-kit dev",
-    "build": "svelte-kit build",
+    "dev": "vite dev",
+    "build": "vite build",
     "prepare": "svelte-kit sync",
     "lint": "npm run lint:es && npm run lint:sv && npm run lint:ts && npm run lint:md",
     "lint:es": "eslint src --ext js,ts,svelte",
@@ -37,6 +37,7 @@
     "svelte-check": "^2.0.0",
     "svelte-preprocess": "^4.6.5",
     "syv": "latest",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "vite": "^3.0.3"
   }
 }
