--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "svelte": "^3.32.1",
     "svelte-check": "^2.0.0",
     "svelte-preprocess": "^4.6.5",
-    "syv": "latest",
+    "syv": "^0.0.12",
     "typescript": "^4.1.3",
     "vite": "^3.0.3"
   }
