--- a/.github/workflows/quality.yaml
+++ b/.github/workflows/quality.yaml
@@ -15,7 +15,17 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - run: npm install && npm run check
+      - uses: pnpm/action-setup@v2
+      - id: pnpm
+        run: echo "::set-output name=cache::$(pnpm store path)"
+      - uses: actions/cache@v3
+        with:
+          path: ${{ steps.pnpm.outputs.cache }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: ${{ runner.os }}-pnpm-store-
+
+      - run: pnpm install
+      - run: pnpm check
 
   lint:
     runs-on: ubuntu-latest
@@ -25,4 +35,14 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - run: npm install && npm run lint
+      - uses: pnpm/action-setup@v2
+      - id: pnpm
+        run: echo "::set-output name=cache::$(pnpm store path)"
+      - uses: actions/cache@v3
+        with:
+          path: ${{ steps.pnpm.outputs.cache }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: ${{ runner.os }}-pnpm-store-
+
+      - run: pnpm install
+      - run: pnpm lint
