--- a/.github/workflows/quality.yaml
+++ b/.github/workflows/quality.yaml
@@ -7,7 +7,7 @@ on:
   pull_request:
 
 jobs:
-  style:
+  check:
     runs-on: ubuntu-latest
 
     steps:
@@ -26,23 +26,3 @@ jobs:
 
       - run: pnpm install
       - run: pnpm check
-
-  lint:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
-      - uses: pnpm/action-setup@v2
-      - id: pnpm
-        run: echo "::set-output name=cache::$(pnpm store path)"
-      - uses: actions/cache@v3
-        with:
-          path: ${{ steps.pnpm.outputs.cache }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: ${{ runner.os }}-pnpm-store-
-
-      - run: pnpm install
-      - run: pnpm lint
