use new env files

--- a/.github/workflows/quality.yaml
+++ b/.github/workflows/quality.yaml
@@ -17,10 +17,10 @@ jobs:
           node-version: 16
       - uses: pnpm/action-setup@v2
       - id: pnpm
-        run: echo "::set-output name=cache::$(pnpm store path)"
+        run: echo "cache=$(pnpm store path)" >> $GITHUB_ENV
       - uses: actions/cache@v3
         with:
-          path: ${{ steps.pnpm.outputs.cache }}
+          path: ${{ env.cache }}
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: ${{ runner.os }}-pnpm-store-
 
