--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "check:lint": "eslint src --ext js,ts,svelte",
     "check:svelte": "svelte-check src --tsconfig tsconfig.json",
     "check:types": "tsc --strict --noEmit --skipLibCheck",
-    "check:content": "markdownlint content/**/*.md"
+    "check:content": "cd content && markdownlint sites/**/*.md"
   },
   "packageManager": "pnpm@7.14.0",
   "prettier": "mauss/prettier.json",
