--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
     "check:types": "tsc --strict --noEmit --skipLibCheck",
     "check:content": "cd content && markdownlint sites/**/*.md"
   },
-  "packageManager": "pnpm@7.14.0",
+  "packageManager": "pnpm@7.25.1",
   "prettier": "mauss/prettier.json",
   "devDependencies": {
+    "@ignatiusmb/styles": "^0.1.0",
     "@sveltejs/adapter-vercel": "next",
     "@sveltejs/kit": "next",
     "autoprefixer": "^10.4.13",
     "katex": "^0.16.3",
     "markdown-it-texmath": "^1.0.0",
     "markdownlint-cli": "^0.32.2",
-    "marqua": "^0.3.1",
+    "marqua": "^0.4.1",
     "mauss": "^0.4.1",
     "postcss": "^8.4.19",
     "prettier": "^2.7.1",
