--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
     "dev": "vite dev",
     "build": "svelte-kit sync && vite build",
     "format": "prettier -w src --plugin-search-dir=.",
-    "check": "svelte-kit sync && pnpm check:style && pnpm check:svelte && pnpm check:types",
+    "check": "svelte-kit sync && pnpm check:style && pnpm check:svelte",
     "check:style": "prettier -c src --plugin-search-dir=.",
     "check:svelte": "svelte-check src --tsconfig ./tsconfig.json",
-    "check:types": "tsc --strict --noEmit --skipLibCheck",
     "check:content": "cd content && markdownlint sites/**/*.md"
   },
   "packageManager": "pnpm@7.28.0",
