--- a/package.json
+++ b/package.json
@@ -14,19 +14,20 @@
   "prettier": "mauss/prettier.json",
   "devDependencies": {
     "@ignatiusmb/styles": "^0.1.1",
-    "@sveltejs/adapter-vercel": "next",
-    "@sveltejs/kit": "next",
-    "katex": "^0.16.3",
+    "@sveltejs/adapter-vercel": "^2.4.1",
+    "@sveltejs/kit": "^1.14.0",
+    "@types/node": "^18.15.10",
+    "katex": "^0.16.4",
     "markdown-it-texmath": "^1.0.0",
     "markdownlint-cli": "^0.32.2",
     "marqua": "^0.4.1",
-    "mauss": "^0.4.1",
-    "prettier": "^2.7.1",
-    "prettier-plugin-svelte": "^2.8.0",
-    "svelte": "^3.54.0",
-    "svelte-check": "^2.9.2",
-    "syv": "^0.0.16",
-    "typescript": "^4.9.3",
-    "vite": "^4.0.0"
+    "mauss": "^0.4.10",
+    "prettier": "^2.8.7",
+    "prettier-plugin-svelte": "^2.10.0",
+    "svelte": "^3.57.0",
+    "svelte-check": "^3.1.4",
+    "syv": "^0.0.21",
+    "typescript": "^4.9.5",
+    "vite": "^4.2.1"
   }
 }
