--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mauss": "^0.4.11",
     "prettier": "^2.8.8",
     "prettier-plugin-svelte": "^2.10.0",
+    "sharp": "^0.32.1",
     "svelte": "^3.58.0",
     "svelte-check": "^3.2.0",
     "syv": "^0.0.23",
