--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "check": "pnpm check:style && pnpm check:svelte",
     "check:style": "prettier -c src --plugin-search-dir=.",
     "check:svelte": "svelte-kit sync && svelte-check src --tsconfig ./tsconfig.json",
-    "check:content": "cd content && markdownlint sites/**/*.md"
+    "check:content": "cd content && pnpm dlx markdownlint-cli sites/**/*.md"
   },
   "packageManager": "pnpm@8.3.1",
   "prettier": "mauss/prettier.json",
@@ -19,7 +19,6 @@
     "@types/node": "^20.2.5",
     "katex": "^0.16.7",
     "markdown-it-texmath": "^1.0.0",
-    "markdownlint-cli": "^0.34.0",
     "marqua": "^0.5.1",
     "mauss": "^0.5.0",
     "prettier": "^2.8.8",
