--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {
     "@ignatiusmb/styles": "^0.1.1",
     "@sveltejs/adapter-vercel": "^3.0.1",
-    "@sveltejs/kit": "^1.20.2",
+    "@sveltejs/kit": "~1.16.3",
     "@types/node": "^20.2.5",
     "marqua": "^0.5.2",
     "mauss": "^0.5.0",
