--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "vite dev",
-    "build": "svelte-kit sync && vite build",
-    "format": "prettier -w src --plugin=prettier-plugin-svelte",
-    "check": "pnpm check:style && pnpm check:svelte",
-    "check:style": "prettier -c src --plugin=prettier-plugin-svelte",
-    "check:svelte": "svelte-kit sync && svelte-check src --tsconfig ./tsconfig.json",
-    "check:content": "cd content && pnpm dlx markdownlint-cli **/*.md"
-  },
-  "packageManager": "pnpm@8.6.11",
-  "prettier": "mauss/prettier.json",
-  "devDependencies": {
-    "@fontsource/fira-code": "^5.0.5",
-    "@fontsource/karla": "^5.0.5",
-    "@fontsource/rubik": "^5.0.5",
-    "@ignatiusmb/styles": "^0.1.1",
-    "@sveltejs/adapter-vercel": "^3.0.2",
-    "@sveltejs/kit": "^1.22.3",
-    "@types/node": "^20.4.5",
-    "marqua": "^0.5.2",
-    "mauss": "^0.7.0",
-    "prettier": "^3.0.0",
-    "prettier-plugin-svelte": "^3.0.3",
-    "sharp": "^0.32.4",
-    "svelte": "^4.1.1",
-    "svelte-check": "^3.4.6",
-    "syv": "^0.0.27",
-    "typescript": "^5.1.6",
-    "vite": "^4.4.7"
-  }
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"dev": "vite dev",
+		"build": "svelte-kit sync && vite build",
+		"format": "prettier -w . --plugin=prettier-plugin-svelte",
+		"check": "pnpm check:style && pnpm check:svelte",
+		"check:style": "prettier -c . --plugin=prettier-plugin-svelte",
+		"check:svelte": "svelte-kit sync && svelte-check src --tsconfig ./tsconfig.json",
+		"check:content": "cd content && pnpm dlx markdownlint-cli **/*.md"
+	},
+	"packageManager": "pnpm@8.6.11",
+	"prettier": "mauss/prettier.json",
+	"devDependencies": {
+		"@fontsource/fira-code": "^5.0.5",
+		"@fontsource/karla": "^5.0.5",
+		"@fontsource/rubik": "^5.0.5",
+		"@ignatiusmb/styles": "^0.1.1",
+		"@sveltejs/adapter-vercel": "^3.0.2",
+		"@sveltejs/kit": "^1.22.3",
+		"@types/node": "^20.4.5",
+		"marqua": "^0.5.2",
+		"mauss": "^0.7.0",
+		"prettier": "^3.0.0",
+		"prettier-plugin-svelte": "^3.0.3",
+		"sharp": "^0.32.4",
+		"svelte": "^4.1.1",
+		"svelte-check": "^3.4.6",
+		"syv": "^0.0.27",
+		"typescript": "^5.1.6",
+		"vite": "^4.4.7"
+	}
 }
