--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
 		"dev": "vite dev",
 		"build": "svelte-kit sync && vite build",
 		"format": "prettier -w .",
-		"check": "pnpm check:style && pnpm check:svelte",
+		"check": "pnpm run \"/^check:.*/\"",
 		"check:style": "prettier -c .",
-		"check:svelte": "svelte-kit sync && svelte-check src --tsconfig ./tsconfig.json",
-		"check:content": "cd content && pnpm dlx markdownlint-cli **/*.md"
+		"check:svelte": "svelte-kit sync && svelte-check src --tsconfig ./tsconfig.json"
 	},
 	"packageManager": "pnpm@8.12.0",
 	"prettier": "mauss/prettier.json",
@@ -16,18 +15,18 @@
 		"@fontsource-variable/fira-code": "^5.0.16",
 		"@fontsource-variable/karla": "^5.0.19",
 		"@ignatiusmb/styles": "^0.1.1",
-		"@sveltejs/adapter-vercel": "^3.1.0",
-		"@sveltejs/kit": "^1.30.1",
-		"@types/node": "^20.10.4",
+		"@sveltejs/adapter-vercel": "^4.0.2",
+		"@sveltejs/kit": "^2.0.2",
+		"@types/node": "^20.10.5",
 		"marqua": "^0.5.6",
 		"mauss": "^0.7.2",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
-		"sharp": "^0.32.6",
+		"sharp": "^0.33.1",
 		"svelte": "^4.2.8",
 		"svelte-check": "^3.6.2",
 		"syv": "^0.0.30",
 		"typescript": "^5.3.3",
-		"vite": "^4.5.1"
+		"vite": "^5.0.10"
 	}
 }
