--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@ignatiusmb/styles": "^0.1.1",
 		"@sveltejs/adapter-vercel": "^4.0.2",
 		"@sveltejs/kit": "^2.0.2",
+		"@sveltejs/vite-plugin-svelte": "^3.0.1",
 		"@types/node": "^20.10.5",
 		"marqua": "^0.5.6",
 		"mauss": "^0.7.2",
