--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
 		"aubade": "^0.8.0",
 		"mauss": "^0.7.2",
 		"prettier": "^3.1.1",
-		"prettier-plugin-svelte": "^3.1.2",
+		"prettier-plugin-svelte": "^3.2.3",
 		"sharp": "^0.33.1",
-		"svelte": "^4.2.8",
+		"svelte": "5.0.0-next.152",
 		"svelte-check": "^3.6.2",
-		"syv": "^0.0.31",
+		"syv": "^0.0.32",
 		"typescript": "^5.3.3",
 		"vite": "^5.0.10"
 	}
