--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 		"sharp": "^0.33.4",
 		"svelte": "5.0.0-next.158",
 		"svelte-check": "^3.8.4",
-		"syv": "^0.0.35",
+		"syv": "0.0.34",
 		"typescript": "^5.5.3",
 		"vite": "^5.3.3"
 	}
