--- a/workspace/website/package.json
+++ b/workspace/website/package.json
@@ -11,18 +11,18 @@
 		"prepare": "svelte-kit sync"
 	},
 	"devDependencies": {
-		"@fontsource-variable/fira-code": "^5.0.18",
-		"@fontsource-variable/karla": "^5.0.21",
+		"@fontsource-variable/fira-code": "^5.1.0",
+		"@fontsource-variable/karla": "^5.1.0",
 		"@ignatiusmb/styles": "^0.1.1",
-		"@sveltejs/adapter-vercel": "^5.4.1",
-		"@sveltejs/kit": "^2.5.18",
-		"@sveltejs/vite-plugin-svelte": "^3.1.1",
+		"@sveltejs/adapter-vercel": "^5.4.5",
+		"@sveltejs/kit": "^2.7.2",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"aubade": "^0.9.0",
 		"mauss": "^0.8.1",
-		"sharp": "^0.33.4",
-		"svelte": "5.0.0-next.188",
-		"svelte-check": "^3.8.4",
-		"syv": "^0.0.37",
-		"vite": "^5.3.4"
+		"sharp": "^0.33.5",
+		"svelte": "^5.0.5",
+		"svelte-check": "^4.0.5",
+		"syv": "^0.0.38",
+		"vite": "^5.4.9"
 	}
 }
