--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
 		"format": "pnpm --filter \"./workspace/*\" format"
 	},
 	"packageManager": "pnpm@10.11.0",
-	"prettier": "mauss/prettier.json",
+	"prettier": "mauss/prettier.config.js",
 	"devDependencies": {
 		"@types/node": "^22.15.21",
-		"mauss": "^0.8.2",
+		"mauss": "^0.8.3",
 		"prettier": "^3.5.3",
 		"prettier-plugin-svelte": "^3.4.0",
 		"typescript": "^5.8.3"
