--- a/workspace/atelier/package.json
+++ b/workspace/atelier/package.json
@@ -9,6 +9,7 @@
 		"prepare": "svelte-kit sync"
 	},
 	"dependencies": {
+		"mauss": "^0.9.0",
 		"pocketbase": "^0.26.0"
 	},
 	"devDependencies": {
@@ -20,7 +21,7 @@
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"aubade": "^0.9.0",
 		"sharp": "^0.34.2",
-		"svelte": "^5.33.3",
+		"svelte": "^5.33.10",
 		"svelte-check": "^4.2.1",
 		"syv": "^0.0.42",
 		"vite": "^6.3.5"
