--- a/workspace/favicon/package.json
+++ b/workspace/favicon/package.json
@@ -6,15 +6,10 @@
 		"dev-host": "vite dev --host",
 		"build": "vite build",
 		"check": "svelte-check src --tsconfig ./tsconfig.json",
-		"prepare": "cp -n .env.example .env && svelte-kit sync"
-	},
-	"dependencies": {
-		"mauss": "^0.10.6",
-		"pocketbase": "^0.26.1"
+		"prepare": "svelte-kit sync"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-vercel": "^5.7.2",
-		"@sveltejs/kit": "^2.22.5",
-		"sharp": "^0.34.3"
+		"@sveltejs/adapter-static": "^3.0.8",
+		"@sveltejs/kit": "^2.22.5"
 	}
 }
