--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"devDependencies": {
 		"@fontsource-variable/fira-code": "^5.2.6",
 		"@fontsource-variable/karla": "^5.2.6",
+		"@fontsource-variable/newsreader": "^5.2.8",
 		"@ignatiusmb/styles": "^0.1.1",
 		"@sveltejs/kit": "^2.22.5",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
