--- a/workspace/apex/package.json
+++ b/workspace/apex/package.json
@@ -15,6 +15,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-vercel": "^5.8.1",
 		"@sveltejs/kit": "^2.26.0",
-		"sharp": "^0.34.3"
+		"sharp": "^0.34.3",
+		"svelte-check": "^4.3.0"
 	}
 }
