--- a/workspace/favicon/package.json
+++ b/workspace/favicon/package.json
@@ -10,6 +10,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-static": "^3.0.8",
-		"@sveltejs/kit": "^2.22.5"
+		"@sveltejs/kit": "^2.26.0",
+		"svelte-check": "^4.3.0"
 	}
 }
