--- a/workspace/apex/package.json
+++ b/workspace/apex/package.json
@@ -9,13 +9,13 @@
 		"prepare": "cp -n .env.example .env && svelte-kit sync"
 	},
 	"dependencies": {
-		"mauss": "^0.10.6",
 		"pocketbase": "^0.26.2"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-vercel": "^5.8.1",
 		"@sveltejs/kit": "^2.26.0",
 		"sharp": "^0.34.3",
+		"svelte": "^5.36.16",
 		"svelte-check": "^4.3.0"
 	}
 }
