--- a/workspace/favicon/package.json
+++ b/workspace/favicon/package.json
@@ -11,6 +11,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.26.0",
+		"svelte": "^5.36.16",
 		"svelte-check": "^4.3.0"
 	}
 }
