--- a/workspace/apex/package.json
+++ b/workspace/apex/package.json
@@ -14,6 +14,8 @@
 	"devDependencies": {
 		"@sveltejs/adapter-vercel": "^5.10.2",
 		"@sveltejs/kit": "^2.37.1",
+		"@vercel/og": "^0.8.5",
+		"satori-html": "^0.3.2",
 		"sharp": "^0.34.3",
 		"svelte": "^5.38.7",
 		"svelte-check": "^4.3.1"
